	- Module API: Store module author and version for module listing
	- API: Added ctcp_reply
	- Setup: We no longer provide a config generator, we now provide an example config for you to edit
	- InspIRCd/Charybdis: Properly handle whether or not a user is an oper. 
	- Module API: added event_deoper and event_oper (meaning you can add hooks for them)
	- Contrib - mattwb65: Updated os_userlog to handle opers and deopers
	- InspIRCd/Charybdis: Track linked servers
	- Module API: added sidInfo
	- Module API: added event_sid and event_netsplit (meaning you can add hooks for them)
	- Contrib - mattwb65: Updated os_userlog to log server introductions and splits
	- InspIRCd/Charybdis: Track users away status
	- Module API: added event_away and event_back (meaning you can add hooks for them)
	- Contrib - mattwb65: Updated os_userlog to log when a user goes away and returns
	- Module API: event_uid now includes the server a user is connecting from
	- Contrib - mattwb65: Updated os_userlog to log what server a user is quitting/connecting from
	- API: Added is_soper
	- Modules: Added operserv/shutdown and operserv/global
	- API: added module_load
	- Modules: Added operserv/modlist and operserv/modload
	- Contrib - mattwb65: Added testing operserv/modunload
	- API fix: Fixed a bug in module_void
	- Contrib - mattwb65: Added chanserv/lol (for an example command) and chanserv/away (for an example hook module) 
	- Docs: Added API docs
	- Core: We no longer censor register
	- Core: Formatted the time chakora was started in the "Chakora was started" message
	- Chakora: Unbreak - lib files were misplaced
	- Core: Added SIGINT handling
	- Modules: Made operserv/shutdown log to the logfile
	- API: Added is_registered
	- Modules: nickserv/register now writes to the db and checks if the nickname is already registered
	- Core: killed src/Chakora/Protocol and src/Chakora/Server.
	- API: Changed the way of sending data in services. Use full services names such as 'chanserv' instead of 'cs'.