@@ -23,20 +23,20 @@ sub svs_os_modload {
 	my $user = substr($rex[0], 1);
 	if (is_soper($user)) {
 		if ($rex[4]) {
-			serv_notice("os", $user, "Attempting to load ".$rex[4]);
-			if (module_exists($rex[4])) { serv_notice("os", $user, "Module already loaded"); }
+			serv_notice("operserv", $user, "Attempting to load ".$rex[4]);
+			if (module_exists($rex[4])) { serv_notice("operserv", $user, "Module already loaded"); }
 			elsif (module_load($rex[4])) {
-				serv_notice("os", $user, "Module loaded");
-				svsilog("os", $user, "modload", $rex[4]); 
+				serv_notice("operserv", $user, "Module loaded");
+				svsilog("operserv", $user, "modload", $rex[4]); 
 			}
-			else { serv_notice("os", $user, "Module loading failed"); }
+			else { serv_notice("operserv", $user, "Module loading failed"); }
 		}
 		else {
-			serv_notice("os", $user, "Not enough parameters. Syntax: MODLOAD <module>");
+			serv_notice("operserv", $user, "Not enough parameters. Syntax: MODLOAD <module>");
 		}
 	}
 	else {
-		serv_notice("os", $user, "Access denied.");
+		serv_notice("operserv", $user, "Access denied.");
 	}
 }
 1;
