@@ -21,7 +21,7 @@ sub svs_os_version {
 	my ($raw) = @_;
 	my @rex = split(' ', $raw);
 	my $user = substr($rex[0], 1);
-	serv_notice("os", $user, $Chakora::SERVICES_VERSION." - Developed by starcoder, MattB, chazz and Freelancer");
+	serv_notice("operserv", $user, $Chakora::SERVICES_VERSION." - Developed by starcoder, MattB, chazz and Freelancer");
 }
 
 1;
